# Miracle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/src/: main.cpp
Miracle/: CMakeLists.txt
Miracle/src/: Miracle.h
Miracle/src/Miracle/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h
